--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://mezianekhalil.github.io/Infinite-Scrolling/views/index.html"
   "name": "just-template",
   "version": "1.0.0",
   "description": "",
